--- a/templates/list_all_movies.html
+++ b/templates/list_all_movies.html
@@ -4,6 +4,43 @@
 
 {% block body %}
 <h1 class="mb-5">All Movies</h1>
+
 <p class="mb-3">See our list of movie ratings below</p>
 <!-- TODO: Feature 1 -->
+{% if movies == [] %}
+<h1 class="text-center">No movies added</h1>
+{% endif %}
+
+{% if movies != [] %}
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Movie Name</th>
+      <th scope="col">Director</th>
+      <th scope="col">Rating</th>
+
+    </tr>
+  </thead>
+  <tbody>
+    {% for movie in movies %}
+    <tr>
+      <td>{{movie.title}}</td>
+      <td>{{movie.director}}</td>
+      <td>
+      {% for i in range(5) %}
+      {% if movie.rating > i%}
+        <img src="/static/assets/star.fill@2x.png" width="25" height="25">
+      {% else %}
+        <img src="/static/assets/star@2x.png" width="25" height="25">
+      {% endif %}
+      {% endfor %} 
+    </td>
+      
+    </tr>
+
+    {% endfor %}  
+
+  </tbody>
+</table>
+{% endif %}
 {% endblock %}
