--- a/templates/create_movies_form.html
+++ b/templates/create_movies_form.html
@@ -6,4 +6,16 @@
 <h1 class="mb-5">Create Movie Rating</h1>
 <p class="mb-3">Create a movie rating below</p>
 <!-- TODO: Feature 2 -->
+<form action="/movies" method="post">
+    <label for="" class="form-label">Movie Name</label>
+    <input type="text" name="name" id="" class="form-control" placeholder="Enter a movie name">
+
+    <label for="" class="form-label">Director</label>
+    <input type="text" name="director" id="" class="form-control" placeholder="Enter a movie director">
+
+    <label for="" class="form-label">Rating</label>
+    <input type="number" name="rating" id="" class="form-control" placeholder="Enter a 1-5 rating">
+
+    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+</form>
 {% endblock %}
